--- a/templates/accounts/base/base.html
+++ b/templates/accounts/base/base.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}{% endblock title %}
-    {% block metatags %}{% endblock metatags %}
+    {% block title %} {% endblock title %}
+    {% block meta %} {% endblock meta %}
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    {% block content %}{% endblock content %}
-    <script src="{% static 'js/app_custom.js' %}" ></script>
+    {% block content %} {% endblock content %}
+
 </body>
 </html>
