--- a/templates/app/pages/index.html
+++ b/templates/app/pages/index.html
@@ -1,13 +1,16 @@
 <!-- extending base -->
-{% extends 'base/app_base.html' %}
+{% extends 'app/base/base.html' %}
 <!-- title block for html page -->
 {% block title %}
-<title>about page</title>
+<title>home page</title>
 {% endblock title %}
 <!-- metatags block for html page -->
 {% block metatags %}
 {% endblock metatags %}
 <!-- content block for html page -->
 {% block content %}
-<h2>about page</h2>
+<h1 class="text-3xl bg-[yellow] p-[50px]">this is index page</h1>
+<h1>Welcome, {{ user.email }}!</h1>
+<a href="{% url 'logout' %}">Logout</a>
 {% endblock content %}
+
